# Clips.gg

./: .gitignore  ARCHITECTURE.md  LICENSE  QUICKSTART.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  styles.css  types.ts
src-recorder/: main.rs
src-tauri/: Cargo.toml  build.rs  build_output.txt  cliplite.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  ffmpeg.rs  hotkey_listener.rs  lib.rs  library.rs  main.rs  rec_audio.rs  rec_ffmpeg.rs  rec_recorder.rs  recorder.rs  recorder_bin.rs  settings.rs  tray.rs
src/components/: DebugPanel.tsx  LibraryView.tsx  RecorderView.tsx  SettingsView.tsx  TrimDialog.tsx
