[package]
name = "cliplite"
version = "1.0.0"
description = "ClipLite — Lightweight Screen Recorder"
authors = ["ClipLite"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"
default-run = "cliplite"

[lib]
name = "cliplite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone recorder process — no Tauri/WebView2, zero D3D competition
[[bin]]
name = "cliplite-recorder"
path = "src/recorder_bin.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell        = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
rusqlite         = { version = "0.31", features = ["bundled"] }
tokio            = { version = "1", features = ["full"] }
anyhow           = "1"
chrono           = { version = "0.4", features = ["serde"] }
dirs             = "5"
which            = "6"
regex            = "1"
log              = "0.4"
scopeguard       = "1"
env_logger       = "0.11"

# Windows-specific: WASAPI audio + Win32 process APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    # For isolated recorder spawn: CreatePipe, STARTUPINFOEXW, UpdateProcThreadAttribute
    "Win32_System_Environment",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
